# mg2hfbot

./: .gitignore  README.md  convert_mg_to_lerobot.py  convert_to_lerobot.py  env.py  eval.py  pyproject.toml  train.py  utils.py
configs/: README.md  default.yaml
configs/env/: coffee.yaml  coffee_preparation.yaml  coffee_preparation_d0.yaml  coffee_preparation_d1.yaml  hammer_cleanup.yaml  kitchen.yaml  kitchen_d0.yaml  kitchen_d1.yaml  mug_cleanup.yaml  nut_assembly.yaml  pick_place.yaml  square.yaml  stack.yaml  stack_d0.yaml  stack_d1.yaml  stack_three.yaml  threading.yaml  three_piece_assembly.yaml
configs/policy/: act_mimicgen.yaml  act_robosuite.yaml  bc_mimicgen.yaml  diffusion_mimicgen.yaml  diffusion_robosuite.yaml
env_meta/: README.md  coffee_env.json  coffee_preparation_d0_env.json  coffee_preparation_d1_env.json  coffee_preparation_env.json  hammer_cleanup_env.json  kitchen_d0_env.json  kitchen_d1_env.json  kitchen_env.json  mug_cleanup_env.json  nut_assembly_env.json  pick_place_env.json  square_env.json  stack_d0_env.json  stack_d1_env.json  stack_env.json  stack_three_env.json  threading_env.json  three_piece_assembly_env.json
mg2hfbot/: __init__.py  converter.py  env.py  stats.py  utils.py
policies/: factory.py
policies/robomimic_bc/: configuration_bc.py  modeling_bc.py
scripts/: check_env.py  test_compute_stats.py  upload_data.py
